// Copyright 2025 The PipeCD Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package grpc.plugin.planpreviewapi.v1alpha1;
option go_package = "github.com/pipe-cd/pipecd/pkg/plugin/api/v1alpha1/planpreview";

import "pkg/model/application.proto";
import "pkg/plugin/api/v1alpha1/common/common.proto";

// PlanPreviewService defines the public APIs for the Plan Preview feature of plugin.
service PlanPreviewService {
    // GetPlanPreview gets the plan preview result for the given application.
    // The plugin will compare the target deployment source with the actual states of the deploy targets.
    rpc GetPlanPreview(GetPlanPreviewRequest) returns (GetPlanPreviewResponse) {}
}

message GetPlanPreviewRequest {
    // ID of the application
    string application_id = 1;
    // Names of the deploy targets.
    repeated string deploy_targets = 2;
    // Target deployment source.
    grpc.plugin.common.v1alpha1.DeploymentSource target_deployment_source = 3;
}

message GetPlanPreviewResponse {
    // Summary of the result.
    string summary = 1;
    // Whether any change are detected or not.
    bool no_change = 2;
    // Content of the result.
    bytes details = 3;
}